themes/experience-engine/assets/styles/components/ads/ad.css
.ad {
	&.-leaderboard {
		padding: 1rem;
		margin-bottom: 10px;

		@media (--min-medium-viewport) {
			background-color: var(--global-gallery);
			margin-bottom: 1.59rem;
		}

		@media (--min-xxlarge-viewport) {
			min-height: 122px;
		}
	}

	&.-centered {
		& .wrapper {
			margin: 0 auto;
			max-width: 970px;
		}
	}

	&.-sticky {
		display: none;

		@media (--min-xlarge-viewport) {
			display: block;
		}

		& .wrapper {
			@media (--min-large-viewport) {
				position: sticky;
				top: 10px;
			}
		}
	}

	&.-footer {
		padding-bottom: 2.667rem;

		@media (--min-large-viewport) {
			padding-bottom: 4.111rem;
		}
	}
}

.placeholder-dfp {
	display: flex;
	justify-content: center;
}

.fadeInAnimation {
	animation: fadeIn 0.6s;
	-webkit-animation: fadeIn 0.6s;
	-moz-animation: fadeIn 0.6s;
	-o-animation: fadeIn 0.6s;
	-ms-animation: fadeIn 0.6s;
}

@keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-moz-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-webkit-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-o-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

@-ms-keyframes fadeIn {
	0% {opacity:0;}
	100% {opacity:1;}
}

.fadeOutAnimation {
	animation: fadeOut 0.6s;
	-webkit-animation: fadeOut 0.6s;
	-moz-animation: fadeOut 0.6s;
	-o-animation: fadeOut 0.6s;
	-ms-animation: fadeOut 0.6s;
}

@keyframes fadeOut {
	0% {opacity:1;}
	100% {opacity:0;}
}

@-moz-keyframes fadeOut {
	0% {opacity:1;}
	100% {opacity:0;}
}

@-webkit-keyframes fadeOut {
	0% {opacity:1;}
	100% {opacity:0;}
}

@-o-keyframes fadeOut {
	0% {opacity:1;}
	100% {opacity:0;}
}

@-ms-keyframes fadeOut {
	0% {opacity:1;}
	100% {opacity:0;}
}

.gallery-listicle .placeholder-dfp > :first-child {
	width: 320px;
}

